style.css
html {
    height: 50%;
}

body {
    display: flex;
    flex-direction: column;
    align-content: center;
    text-align: center;
    background-color: rgb(246, 211, 255);
    height: 100%;
}

h1 {
    font-family: Verdana,f Geneva, Tahoma, sans-serif;
}

#calculator {
    border-style: solid;
    min-height: 70%;
    width: 50%;
    align-self: center;
    background-color: rgb(230, 64, 64);
    border-radius: 15px;
}

#display {
    border-style: solid;
    text-align: end;
    height: 40px;
    padding: 10px;
    font-size: xx-large;
    margin: 10px;
    background-color: antiquewhite;
    border-radius: 7px;
}

.buttons {
    display: flex;
    justify-content:space-around;
}

.leftSide {
    display: grid;
    width: 50%;
    grid-template-columns: auto auto auto;
    padding: 10px;
    gap: 5px;
}

.rightSide {
    display: grid;
    width: 50%;
    grid-template-columns: auto auto;
    padding: 10px;
    gap: 5px;


}

.button {
    background-color: aquamarine;
    padding: 5%;
    border-radius: 10px;
}

.clear {
    background-color: rgb(247, 91, 91);
}

.backspace {
    background-color: rgb(196, 187, 187);
}

.add, .subtract, .multiply, .divide, .equals {
    background-color: aqua;
}

